# runhaRust

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  nginx.conf
db/: init.sql
src/: main.rs  model.rs  routes.rs
