[package]
name = "rinhaRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.7"
config = "0.13.1"

actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
uuid = {version = "1.4.1", features = ["v4", "serde"]}
time = "0.3.28"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }

dotenv = "0.15.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = {version = "0.7.6", features = ["with-uuid-1", "with-time-0_3"]}